--- a/slides/08-multinomial/multinomial.html
+++ b/slides/08-multinomial/multinomial.html
@@ -406,12 +406,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.13       digest_0.6.25  
 ## [13] rlang_0.4.5     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ───────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.0     ✓ dplyr   0.8.5
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ──────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -1034,9 +1034,16 @@ predict(opmod, data.frame(nincome = il), type = &quot;probs&quot;)</code></pre>
 \]</span></p></li>
 <li><p>The <strong>hazard</strong> of category <span class="math inline">\(j\)</span> is the probability of falling in category <span class="math inline">\(j\)</span> given that your category is greater than <span class="math inline">\(j\)</span> <span class="math display">\[
 \text{Hazard}(j) = \mathbb{P}(Y_i = j \mid Y_i \ge j) = \frac{\mathbb{P}(Y_i = j)}{\mathbb{P}(Y_i \ge j)} = \frac{\gamma_{ij} - \gamma_{i,j-1}}{1 - \gamma_{i,j-1}}.
-\]</span> It is called the <strong>proportional hazards model</strong> because of the relation <span class="math display">\[
-\mathbb{P}(Y &gt; j \mid \mathbf{x}_1) = [\mathbb{P}(Y &gt; j \mid \mathbf{x}_2)]^{\exp (\mathbf{x}_1 - \mathbf{x}_2)^T \beta}.
-\]</span></p></li>
+\]</span> The quantity <span class="math inline">\(- \log \mathbb{P}(Y \ge j)\)</span> is called the cumulative hazard function.</p></li>
+<li><p>Since <span class="math display">\[\begin{eqnarray*}
+1 - \gamma_j(\mathbf{x}) &amp;=&amp; \mathbb{P}(Y &gt; j) = e^{- e^{\theta_j - \mathbf{x}^T \boldsymbol{\beta}}},
+\end{eqnarray*}\]</span> we have <span class="math display">\[\begin{eqnarray*}
+\log \mathbb{P}(Y &gt; j) = - e^{\theta_j - \mathbf{x}^T \boldsymbol{\beta}}
+\end{eqnarray*}\]</span> and <span class="math display">\[
+\frac{- \log \mathbb{P}(Y &gt; j \mid \mathbf{x}_1)}{- \log \mathbb{P}(Y &gt; j \mid \mathbf{x}_2)} = e^{(\mathbf{x}_2 - \mathbf{x}_1)^T \boldsymbol{\beta}}
+\]</span> or <span class="math display">\[
+\mathbb{P}(Y &gt; j \mid \mathbf{x}_1) = [\mathbb{P}(Y &gt; j \mid \mathbf{x}_2)]^{\exp (\mathbf{x}_2 - \mathbf{x}_1)^T \boldsymbol{\beta}}.
+\]</span> It is called the <strong>proportional hazards model</strong> because the ratio of cumulative hazards does not depend on level <span class="math inline">\(j\)</span>.</p></li>
 </ul>
 <pre class="r"><code>polr(sPID ~ nincome, method = &quot;cloglog&quot;, data = nes96)</code></pre>
 <pre><code>## Call:
