--- a/hw/hw4/hw4.html
+++ b/hw/hw4/hw4.html
@@ -408,14 +408,17 @@ y_{ij} = \mu + \alpha_i + \epsilon_{ij}, \quad i=1,\ldots,a, \quad j=1,\ldots,n.
 </div>
 <div id="q3.-estimation-of-random-effects" class="section level2">
 <h2>Q3. Estimation of random effects</h2>
-<p>Assume the conditional distribution <span class="math display">\[
+<ol style="list-style-type: decimal">
+<li><p>Assume the conditional distribution <span class="math display">\[
 \mathbf{y} \mid \boldsymbol{\gamma} \sim N(\mathbf{X} \boldsymbol{\beta} + \mathbf{Z} \boldsymbol{\gamma}, \sigma^2 \mathbf{I}_n)
 \]</span> and the prior distribution <span class="math display">\[
 \boldsymbol{\gamma} \sim N(\mathbf{0}_q, \boldsymbol{\Sigma}).
 \]</span> Then by the Bayes theorem, the posterior distribution is <span class="math display">\[\begin{eqnarray*}
 f(\boldsymbol{\gamma} \mid \mathbf{y}) &amp;=&amp; \frac{f(\mathbf{y} \mid \boldsymbol{\gamma}) \times f(\boldsymbol{\gamma})}{f(\mathbf{y})}, \end{eqnarray*}\]</span> where <span class="math inline">\(f\)</span> denotes corresponding density. Show that the posterior distribution is a multivariate normal with mean <span class="math display">\[
 \mathbb{E} (\boldsymbol{\gamma} \mid \mathbf{y}) = \boldsymbol{\Sigma} \mathbf{Z} (\mathbf{Z} \boldsymbol{\Sigma} \mathbf{Z}^T + \sigma^2 \mathbf{I})^{-1} (\mathbf{y} - \mathbf{X} \boldsymbol{\beta}).
-\]</span></p>
+\]</span></p></li>
+<li><p>For the balanced one-way ANOVA random effects model, show that the posterior mean of random effects is always a constant (less than 1) multiplying the corresponding fixed effects estimate.</p></li>
+</ol>
 </div>
 <div id="q4.-elmr-exercise-11.1-p251" class="section level2">
 <h2>Q4. ELMR Exercise 11.1 (p251)</h2>
